[package]
name = "meta_rust"
version = "0.1.0"
authors = ["yilmazgunalp <yilmazgunalp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genapi_macro = { path = "./genapi_macro"} 
rocket = "0.4.5"

quote = "1.0"
proc-macro2 = "1.0.24" 

[dependencies.syn]
version = "1.0"
features = ["parsing", "full", "extra-traits", "printing"]